@@ -137,6 +137,8 @@ is_deeply $dist->docs, {
 
 ok my $doc = $dist->body_for_html_doc('README'),
     'Fetch the README body';
+my $windows = $^O =~ /^MSWin/;
+$doc =~ s/\r\n/\n/g if $windows;
 
 # Contents should be the decoded HTML.
 is $doc, do {
@@ -149,6 +151,7 @@ is $doc, do {
 # Do the same for the doc.
 ok $doc = $dist->body_for_html_doc('doc/pair'),
     'Fetch the doc/pair body';
+$doc =~ s/\r\n/\n/g if $windows;
 is $doc, do {
     my $fn = catfile qw(t mirror dist pair 0.1.1 doc pair.html);
     open my $fh, '<:encoding(utf-8)', $fn or die "Cannot open $fn: $!\n";
